--- a/src/app/shared/inscription/inscription-entreprise/inscription-entreprise.component.html
+++ b/src/app/shared/inscription/inscription-entreprise/inscription-entreprise.component.html
@@ -1,11 +1,11 @@
 <!-- Formulaire -->
 <form [formGroup]="form" (ngSubmit)="submit()">
 
-    <div class="form-outline mb-3 small">
+    <!-- <div class="form-outline mb-3 small">
       <label class="form-label small" for="form2Example11">Profile picture</label>
     <input type="file" id="form2Example11" class="form-control form-control-sm" (change)="handleImageInput($event)"
       placeholder="Photo de profil" formControlName="photo" accept="image/png, image/jpeg, image/jpg "/>
-  </div>
+  </div> -->
 
   <div class="form-outline mb-3 small">
       <label class="form-label small" for="form2Example11">Company name</label>
