--- a/src/app/shared/propos/propos.component.html
+++ b/src/app/shared/propos/propos.component.html
@@ -1,10 +1,9 @@
-<section class="vh-100" style="background-color: hsl(0, 0%, 96%)">
+<section class="vh-100">
   <div class="container py-5 h-100">
     <div class="row justify-content-center align-items-center h-100">
       <div class="col col-xl-100">
         <div class="card" style="border-radius: 1rem;">
           <div class="d-flex align-items-center justify-content-center mb-3 pb-1" id="logo">
-            <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
             <span class="h1 fw-bold mt-4 mb-4"><img id="image" src="/assets/images/uyy.png" style="width: 200px; height: 200px;"></span>
           </div>
           <div class="row g-0">
