--- a/src/app/annuaire-user/annuaire-students/annuaire-students.component.html
+++ b/src/app/annuaire-user/annuaire-students/annuaire-students.component.html
@@ -4,9 +4,9 @@
 <br>
 <div class="my-2">
   <div class="row">
-     <div class="col-md-5 form-group d-flex ">
+     <div class="col-md-5 form-group d-flex " id="search">
        <span class="search" >rechercher</span>
-        <input type="text" class="form-control" [ngModel]="studentresearch" (ngModelChange)="studentresearch = $event">
+        <input id="reach" type="text" class="form-control" [ngModel]="studentresearch" (ngModelChange)="studentresearch = $event">
      </div>
   </div>
 </div>
