--- a/src/app/annuaire-user/annuaire-students/annuaire-students.component.scss
+++ b/src/app/annuaire-user/annuaire-students/annuaire-students.component.scss
@@ -29,5 +29,15 @@ margin-left: 95px;
   transition: all 0.5s ease;
   box-shadow: 4px 5px 15px black ;
 }
+#reach{
+    border-radius: 25px;
+    box-shadow: 4px 5px 8px black ;
+     padding: 15px 0 15px 15px;
+}
+#search{
+    margin-left: 20%;
+     display: flex;
+     align-items: center;
+}
 
 
