--- a/src/app/annuaire-user/annuaire-teachers/annuaire-teachers.component.html
+++ b/src/app/annuaire-user/annuaire-teachers/annuaire-teachers.component.html
@@ -4,9 +4,9 @@
 <br>
 <div class="my-2">
   <div class="row">
-     <div class="col-md-5 form-group d-flex ">
+     <div class="col-md-5 form-group d-flex "id="search">
        <span class="search" >rechercher</span>
-        <input type="text" class="form-control" [ngModel]="teacherresearch" (ngModelChange)="teacherresearch = $event">
+        <input id="reach"  type="text" class="form-control" [ngModel]="teacherresearch" (ngModelChange)="teacherresearch = $event">
      </div>
   </div>
 </div>
@@ -26,11 +26,10 @@
         </div>
         <div class=" modif ">
           <p class="card-text d-flex "><small class="text-body-secondary ">Dernieres modifications il y'a 3 mins <button class="btn btn-primary " [routerLink]="['/annuaireTeach',teacher.idUser]">regarder</button></small></p>
-
         </div>
       </div>
     </div>
   </div>
 </div>
-  </div>
+</div>
 
